--- a/11-t-test.qmd
+++ b/11-t-test.qmd
@@ -598,13 +598,13 @@ points(x=jitter(rep(2,15), 2), y = diet.bone,
 
 ## 6 Practice exercises
 
-For the following exercises, use the dataset in the file [11-Davis.xlsx](data/2.5-Davis.xlsx). The dataset is in tidy format; take advantage of this by looking at the terse information present in the data dictionary tab. The data are a result of a survey of some university students, who were asked to report their height and weight, and then their height and weight were measured. There will be some data handling as part of the exercises below, and practical and important part of every real data analysis.
+For the following exercises, use the dataset in the file 11-Davis.xlsx. The dataset is in tidy format; take advantage of this by looking at the terse information present in the data dictionary tab. The data are a result of a survey of some university students, who were asked to report their height and weight, and then their height and weight were measured. There will be some data handling as part of the exercises below, and practical and important part of every real data analysis.
 
 <br>
 
-### 6.1
+### 6.1 Paired Height Test
 
-Pick the appropriate form of t-test to ask whether male reported and actual `height` are the same. Perform the test, make a great graph to illustrate, and report your results in the technical style. Show all required code.
+Pick the appropriate form of t-test to ask whether male reported and actual height are the same. Perform the test, make a great graph to illustrate, and report your results in the technical style. Show all required code.
 
 <br>
 
@@ -657,9 +657,9 @@ The paired t-test is appropriate because we're comparing two measurements (repor
 
 <br>
 
-### 6.2
+### 6.2 Weight Reporting
 
-Devise a similar test to the one in the previous question using the `weight` variables in females. Formally state your hypothesis, perform the test, make a great graph to illustrate, and report your results in the technical style. Show all required code.
+Devise a similar test to the one in the previous question using the weight variables in females. Formally state your hypothesis, perform the test, make a great graph to illustrate, and report your results in the technical style. Show all required code.
 
 <br>
 
@@ -715,9 +715,9 @@ The results show a significant difference between female reported and actual wei
 
 <br>
 
-### 6.3
+### 6.3 Gender Differences
 
-Calculate the difference between reported `height` and reported `weight` for all study subjects and place the result in a new numeric vector. Use a t-test to discover whether the degree of discrepancy between reported height differs between males and females. Report your results in the technical style. Show all required code.
+Calculate the difference between reported height and reported weight for all study subjects and place the result in a new numeric vector. Use a t-test to discover whether the degree of discrepancy between reported height differs between males and females. Report your results in the technical style. Show all required code.
 
 <br>
 
@@ -765,7 +765,7 @@ There was no significant difference in height reporting discrepancy between male
 
 <br>
 
-### 6.4
+### 6.4 Height Reporting
 
 Devise a way to examine the question whether taller people tend to self report height similarly to whorter people. Discuss your approach and present any evidence, graphical or otherwise, to resolve your question.
 
@@ -814,7 +814,7 @@ To examine whether height reporting accuracy varies with actual height, I plotte
 
 <br>
 
-### 6.5
+### 6.5 Population Comparison
 
 The subjects in this dataset were students at the University of California Davis in the Psychology Department. The average height of adult men in California has been estimated as 176.5 cm. Test whether males in our dataset is different. State your conclusion and results and briefly discuss an explanation for the pattern (i.e., the difference or lack of difference) that you observe. Comment on sampling assumptions when you do so.
 
@@ -868,7 +868,7 @@ Regarding sampling assumptions, this is a small sample (n = 13) of psychology st
 
 <br>
 
-### 6.6
+### 6.6 BMI Question
 
 Write a plausible practice question involving any aspect of data handling, graphing or analysis for the t-test framework to ask a novel question for the Davis student height data.
 
