--- a/14-rmarkdown.qmd
+++ b/14-rmarkdown.qmd
@@ -239,20 +239,20 @@ Based on our analysis, there is a significant negative relationship between car 
 ## 9 Practice Exercises
 
 ::: {.callout-note appearance="minimal"}
-### Exercise 1
+### Exercise 1: Basic R Markdown
 
 Create a new R Markdown document that includes: - A title and your name - A brief introduction - A code chunk that loads and summarizes a dataset of your choice - A visualization of the data - A brief conclusion
 
-### Exercise 2
+### Exercise 2: Output Formats
 
 Experiment with different output formats (HTML, PDF, Word) and observe the differences.
 
-### Exercise 3
+### Exercise 3: Advanced Features
 
 Create an R Markdown document with a table of contents, code folding, and a custom theme.
 :::
 
-### Exercise 1
+### Exercise 1: Basic R Markdown
 
 Create a new R Markdown document that includes: - A title and your name - A brief introduction - A code chunk that loads and summarizes a dataset of your choice - A visualization of the data - A brief conclusion
 
@@ -323,12 +323,11 @@ This R Markdown document includes:
 
 <br>
 
-### Exercise 2
+### Exercise 2: Output Formats
 
 Experiment with different output formats (HTML, PDF, Word) and observe the differences.
 
 <br>
-
 
 ::: {.callout-tip collapse="true"}
 ## Solution: Output Format Comparison
@@ -410,7 +409,7 @@ To fully experience these differences, you would need to knit the same document 
 
 <br>
 
-### Exercise 3
+### Exercise 3: Advanced Features
 
 Create an R Markdown document with a table of contents, code folding, and a custom theme.
 
