Update chi-square goodness of fit test in `08-sampling-dist.qmd` to use expected frequencies instead of Poisson probabilities. Remove obsolete PNG files related to sampling distribution visualizations to streamline the project and enhance clarity.

--- a/08-sampling-dist.qmd
+++ b/08-sampling-dist.qmd
@@ -660,7 +660,8 @@ legend("topright",
 
 # Perform chi-square goodness of fit test
 # Note: Categories with expected frequencies < 5 should be combined
-chisq.test(observed_freq, p = poisson_probs)
+chisq.test(observed_freq, expected_freq)
+
 ```
 
 **Conclusion**:
@@ -737,7 +738,7 @@ legend("topright",
 
 # Perform chi-square goodness of fit test
 # Note: Categories with expected frequencies < 5 should be combined
-chisq.test(observed_freq, p = poisson_probs)
+chisq.test(observed_freq, expected_freq)
 ```
 
 **Conclusion**:
