--- a/12-1-way-anova.qmd
+++ b/12-1-way-anova.qmd
@@ -601,7 +601,7 @@ anova(m1)$"F value"[1] # Store-bought F
 
 ## 8 Practice exercises
 
-For these exercises, run the code below to recreate the data object `pest`. There are 40 rows and 2 variables with 2 variables: `damage` and `treatment`.
+For these exercises, run the code below to recreate the data object `pest`. There are 40 rows and two variables: `damage` and `treatment`.
 
 ```{r}
 pest <- structure(list(damage = c(113.7, 94.4, 103.6, 
